--- a/package.json
+++ b/package.json
@@ -1,23 +1,12 @@
 {
-  "name": "backend-sehatchain",
+  "name": "backend-sehatledger",
   "version": "1.0.0",
   "description": "To make it easy for you to get started with GitLab, here's a list of recommended next steps.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://gitlab.com/milhamap/backend-sehatchain.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://gitlab.com/milhamap/backend-sehatchain/issues"
-  },
-  "homepage": "https://gitlab.com/milhamap/backend-sehatchain#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
@@ -34,5 +23,7 @@
     "pg": "^8.9.0",
     "randomstring": "^1.2.3",
     "uuid": "^9.0.0"
-  }
+  },
+  "author": "",
+  "license": "ISC"
 }
